# rabbitmq-stream-c-client

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OsirisLogFormat.txt  README.md  main.c  rabbitmq-stream-c-client.sln  rabbitmq-stream-c-client.vcxproj  rabbitmq-stream-c-client.vcxproj.filters
.github/workflows/: cmake.yaml
doc/: AMQP1_0_Encoding.txt
doxygen/: Doxyfile
doxygen/html/: annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_c2041065ae2580372680e5ac7ffaeff8.html  dir_c2041065ae2580372680e5ac7ffaeff8.js  doxygen.css  files.html  functions.html  functions_vars.html  globals.html  globals_c.html  globals_d.html  globals_defs.html  globals_dup.js  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_l.html  globals_m.html  globals_p.html  globals_r.html  globals_s.html  globals_t.html  globals_type.html  globals_u.html  globals_vars.html  index.html  main_8c.html  menudata.js  navtreedata.js  navtreeindex0.js  navtreeindex1.js  navtreeindex2.js  rmqs_broker_8c.html  rmqs_broker_8c.js  rmqs_broker_8c_source.html  rmqs_broker_8h.html  (+159 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  typedefs_5.js  (+17 more)
doxygen/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  main_8c.tex  refman.tex  rmqs_environment_8c.tex  rmqs_environment_8h.tex  rmqs_environment_8h_source.tex  rmqs_list_8c.tex  rmqs_list_8h.tex  rmqs_list_8h_source.tex  rmqs_memory_8c.tex  rmqs_memory_8h.tex  rmqs_memory_8h_source.tex  rmqs_mutex_8c.tex  rmqs_mutex_8h.tex  rmqs_mutex_8h_source.tex  rmqs_network_8c.tex  rmqs_network_8h.tex  rmqs_network_8h_source.tex  rmqs_producer_8c.tex  rmqs_producer_8h.tex  rmqs_producer_8h_source.tex  rmqs_protocol_8c.tex  rmqs_protocol_8h.tex  rmqs_protocol_8h_source.tex  rmqs_stream_8c.tex  rmqs_stream_8h.tex  rmqs_stream_8h_source.tex  rmqs_thread_8c.tex  rmqs_thread_8h.tex  rmqs_thread_8h_source.tex  rmqs_timer_8c.tex  rmqs_timer_8h.tex  rmqs_timer_8h_source.tex  structrmqs_broker__t.tex  structrmqs_environment__t.tex  structrmqs_list__t.tex  structrmqs_list_node__t.tex  structrmqs_mutex__t.tex  (+6 more)
doxygen/man/man3/: rmqsBroker_t.3  rmqsBuffer_t.3  rmqsClientConfiguration_t.3  rmqsClient_t.3  rmqsListNode_t.3  rmqsList_t.3  rmqsLogger_t.3  rmqsMessage_t.3  rmqsMsgHeader_t.3  rmqsMutex_t.3  rmqsProducer_t.3  rmqsProperty_t.3  rmqsResponseHandshakeRequest_t.3  rmqsResponse_t.3  rmqsThread_t.3  rmqsTimer_t.3  rmqsTuneRequest_t.3  rqmsCreateStreamArgs_t.3
src/: RMQSClient.cbp  RMQSClient.depend  RMQSClient.layout  main.c  rawClientTest.c  rmqsBroker.c  rmqsClient.c  rmqsClient.h  rmqsClientConfiguration.c  rmqsEnvironment.c  rmqsEnvironment.h  rmqsError.h  rmqsGlobal.h  rmqsLib.c  rmqsList.c  rmqsList.h  rmqsLogger.c  rmqsLogger.h  rmqsMemBuffer.c  rmqsMemBuffer.h  rmqsMemory.c  rmqsMemory.h  rmqsMutex.c  rmqsMutex.h  rmqsNetwork.c  rmqsNetwork.h  rmqsProducer.c  rmqsProducer.h  rmqsProtocol.c  rmqsProtocol.h  rmqsStream.c  rmqsStream.h  rmqsThread.c  rmqsThread.h  rmqsTimer.c  rmqsTimer.h
src/rawClient/: CMakeLists.txt  rmqsAMQP1_0.c  rmqsAMQP1_0.h  rmqsBroker.c  rmqsBroker.h  rmqsBuffer.c  rmqsBuffer.h  rmqsClient.c  rmqsClient.h  rmqsClientConfiguration.c  rmqsClientConfiguration.h  rmqsConsumer.c  rmqsConsumer.h  rmqsError.c  rmqsError.h  rmqsGlobal.h  rmqsLib.c  rmqsLib.h  rmqsList.c  rmqsList.h  rmqsLogger.c  rmqsLogger.h  rmqsMemBuffer.c  rmqsMemBuffer.h  rmqsMemory.c  rmqsMemory.h  rmqsMessage.c  rmqsMessage.h  rmqsMutex.c  rmqsMutex.h  rmqsNetwork.c  rmqsNetwork.h  rmqsOptions.h  rmqsProducer.c  rmqsProducer.h  rmqsProtocol.c  rmqsProtocol.h  rmqsPublisher.c  rmqsPublisher.h  rmqsThread.c  (+3 more)
src/rawClientTest/: rawClientTest.c
test/suite_1/resources/: message_body_700  message_body_this_is_a_amqp_message  message_body_unicode_500_body
tests/rawClientTest/: rawClientTest.c
tests/suite_1/: CMakeLists.txt  client_test  rawClientTest.c
