add_library(rabbitmq_stream_c_lib STATIC
        rmqsBroker.c
        rmqsBroker.h
        rmqsBuffer.c
        rmqsBuffer.h
        rmqsClient.c
        rmqsClient.h
        rmqsClientConfiguration.c
        rmqsClientConfiguration.h
        rmqsConsumer.c
        rmqsConsumer.h
        rmqsError.c
        rmqsError.h
        rmqsGlobal.h
        rmqsLib.c
        rmqsLib.h
        rmqsList.c
        rmqsList.h
        rmqsLogger.c
        rmqsLogger.h
        rmqsMemory.c
        rmqsMemory.h
        rmqsMessage.c
        rmqsMessage.h
        rmqsMutex.c
        rmqsMutex.h
        rmqsNetwork.c
        rmqsNetwork.h
        rmqsPublisher.c
        rmqsPublisher.h
        rmqsProtocol.c
        rmqsProtocol.h
        rmqsThread.c
        rmqsThread.h
        rmqsTimer.c
        rmqsTimer.h)

target_include_directories(rabbitmq_stream_c_lib PUBLIC
        ${CMAKE_CURRENT_LIST_DIR}
        )